PossetInterpreter/src/test/resources/syntax-errors/invalid-restriction-variable-location.pos

main (
	True t; 
)


True
(
	Boolean first[A];
)
{
	(A)
	(#1)
}

/* The boolean consists of two possible values. */
Boolean
(
	'2 first;
)